--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "scrollmagic": "^2.0.5"
+  },
   "devDependencies": {
     "concurrently": "^3.5.1",
     "live-server": "^1.2.0",
